<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Android Timeline</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="greeting">Hey Andrew and Daniel!</string>
    <string name="title_activity_add_event">AddEvent</string>
    <string name="newEventTitle">New Event</string>
    <string name="eventTitle">Event Title</string>
    <string name="editCheckBox">Duration</string>
    <string name="firstDate">First Date</string>
    <string name="secondDate">Second Date</string>
    <string name="tempCategory">Temporary Category</string>
    <string name="eventDetails">Event Details</string>
    <string name="title_activity_add_category">Add_category</string>
    <string name="addCategoryTitle">Add Category</string>
    <string name="categoryTitle">Category Title</string>
    <string name="selectColor">Select Color</string>
    <string name="ok">OK</string>
    <string name="addEvent">Add Event</string>
    <string name="addCategory">Add Category</string>
    <string name="timelineListviewCaption">Select a timeline to work with from below</string>
    <string name="title_activity_timeline_display">Timeline Display</string>
    <string name="atomic">Atomic</string>

</resources>
