<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wheaton.cs335.androidtimeline.AddEvent$PlaceholderFragment" >

    <TextView
        android:id="@+id/newEventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/newEventTitle"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/EventTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/newEventTitle"
        android:layout_below="@+id/newEventTitle"
        android:ems="10"
        android:inputType="text"
        android:text="@string/eventTitle" >

        <requestFocus />
    </EditText>

    <CheckBox
        android:id="@+id/DurationCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/EventTitle"
        android:layout_below="@+id/EventTitle"
        android:text="@string/editCheckBox" />

    <TextView
        android:id="@+id/firstDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/DurationCheckBox"
        android:layout_below="@+id/DurationCheckBox"
        android:text="@string/firstDate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <DatePicker
        android:id="@+id/datePicker1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DurationCheckBox"
        android:layout_toRightOf="@+id/firstDateLabel" />

    <TextView
        android:id="@+id/secondDateLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/firstDateLabel"
        android:layout_below="@+id/firstDateLabel"
        android:text="@string/secondDate"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <DatePicker
        android:id="@+id/datePicker2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/datePicker1"
        android:layout_toRightOf="@+id/newEventTitle" />

    <TextView
        android:id="@+id/tempCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/secondDateLabel"
        android:layout_below="@+id/datePicker2"
        android:text="@string/tempCategory"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <EditText
        android:id="@+id/eventDetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tempCategory"
        android:layout_below="@+id/tempCategory"
        android:ems="10"
        android:inputType="textMultiLine"
        android:text="@string/eventDetails" />

</RelativeLayout>
